<resources>
    <string name="tv_title" translatable="false">Calculator IVA 2024</string>
    <string name="tv_total" translatable="false">$00.00</string>
    <string name="tv_type" translatable="false">Select IVA type</string>
    <string-array name="sp_type">
        <item>Front</item>
        <item>Normal</item>
    </string-array>
    <string name="tv_amount" translatable="false">Entry amount:</string>
    <string name="et_amount" translatable="false">Mount:</string>
    <string name="btn_calculate" translatable="false">Calculate</string>
</resources>